<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/find_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_label" />

        <ImageView
            android:id="@+id/focus_imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/none"
            android:paddingLeft="5dp"
            android:src="@drawable/garnet" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp" >
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_newgame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/new_game_label" />

        <Button
            android:id="@+id/button_uncover"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/uncover_label" />
    </LinearLayout>

</LinearLayout>