<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/resultLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResultActivity" >

    <TextView
        android:id="@+id/message_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/time_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/message_textView"
        android:layout_below="@+id/message_textView"
        android:text="" />

    <ImageView
        android:id="@+id/result_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="68dp"
        android:contentDescription="@string/none"
        android:src="@drawable/win" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/result_imageView"
        android:layout_alignLeft="@+id/result_imageView" >

        <Button
            android:id="@+id/button_try_again"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/try_again_label" />

        <Button
            android:id="@+id/button_exit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/exit_label" />
    </LinearLayout>

</RelativeLayout>